# metalimbs-ros2-ws

./: .gitignore  GAZEBO_SIMULATION_README.md  MESH_FILES_README.md  README.md  build.sh  conversion_log.md  debug_gazebo.sh  launch_ign_colored.sh  launch_ign_human_selection.sh  launch_ign_original.sh  launch_ign_standing_person.sh  launch_ign_with_robot.sh  search_fuel_models.sh  setup_gazebo_env.sh  simple_robot.urdf  spawn_fixed.sh  spawn_ign.sh  spawn_robot.sh  spawn_robot_direct.sh  spawn_robot_new.sh  test_box.sdf  test_gazebo_mesh.sh  test_rviz_and_ign.sh
src/metalimbs_bringup/: CMakeLists.txt  package.xml
src/metalimbs_bringup/launch/: start.launch
src/metalimbs_description/: CMakeLists.txt  package.xml
src/metalimbs_description/config/: controller.yaml  ros2_controllers.yaml
src/metalimbs_description/launch/: display.launch.py  display_robot.launch  gazebo.launch.py  gazebo_ign.launch.py  gazebo_simple.launch.py  ign_gazebo.launch.py  simple_display.launch.py  spawn_robot.launch.py
src/metalimbs_description/meshes/: README.md
src/metalimbs_description/meshes/metalimbs2/: .gitignore
src/metalimbs_description/models/metalimbs_description/: model.config  model.sdf
src/metalimbs_description/robot/: metalimbs2.urdf.xacro  metalimbs2_absolute_path.urdf.xacro  metalimbs2_fixed.urdf.xacro  metalimbs2_fixed_horizontal.urdf.xacro  metalimbs2_gazebo.urdf.xacro  metalimbs2_ign.urdf.xacro  metalimbs2_ign_corrected.urdf.xacro  metalimbs2_ign_fixed.urdf.xacro  metalimbs2_ign_gazebo.urdf.xacro
src/metalimbs_description/rviz/: metalimbs.rviz  real.rviz  urdf.rviz
src/metalimbs_description/urdf/: metalimbs2_gazebo_absolute.urdf.xacro
src/metalimbs_gazebo_bringup/: CMakeLists.txt  package.xml
src/metalimbs_gazebo_bringup/config/: dummy_pid.yaml
src/metalimbs_gazebo_bringup/launch/: fixed_metalimbs.launch  moveit_demo.launch
src/metalimbs_gazebo_bringup/robot/: metalimbs2.gazebo.xacro
src/metalimbs_gazebo_bringup/robot_setup/: metalimbs_on_fixed_stage.xacro
src/metalimbs_hardware/: CMakeLists.txt  package.xml  pyproject.toml
src/metalimbs_hardware/include/metalimbs_hardware/: arm_control_service.hpp  command.hpp  hardware.hpp  serial.hpp  serialize.hpp
src/metalimbs_hardware/launch/: arm_control_service.launch  start.launch
src/metalimbs_hardware/src/metalimbs_hardware/: arm_control_service.cpp  arm_control_service_node.cpp  hardware.cpp  metalimbs_hardware_node.cpp  serial.cpp
src/metalimbs_hardware/test/: command_test.cpp  serialize_test.cpp
src/metalimbs_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/metalimbs_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  metalimbs.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
src/metalimbs_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
src/metalimbs_msgs/: CMakeLists.txt  package.xml
src/metalimbs_srvs/: CMakeLists.txt  package.xml
src/metalimbs_srvs/srv/: ReadAllPosition.srv  ReadPosition.srv  ReadTemperature.srv  SetAllPosition.srv  SetPosition.srv
