<?xml version="1.0"?>
<package format="3">
  <name>metalimbs_gazebo_bringup</name>
  <version>0.0.0</version>
  <description>The metalimbs_gazebo_bringup package</description>

  <maintainer email="watanabe@star.rcast.u-tokyo.ac.jp">watanabe</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>metalimbs_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
