<?xml version="1.0"?>
<package format="3">
  <name>metalimbs_hardware</name>
  <version>0.0.0</version>
  <description>The metalimbs_hardware package</description>

  <maintainer email="watanabe@star.rcast.u-tokyo.ac.jp">watanabe</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>urdf</depend>
  <depend>metalimbs_srvs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>